<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.VideoRecoderActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#4CAF50"
        android:onClick="captureVideo"
        android:text="@string/capture_video"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/imageThumLayoutID"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="playVideo"
        android:visibility="gone">

        <ImageView
            android:id="@+id/videoThumbnailIVID"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/placeholder_image"
            android:scaleType="centerCrop"
            android:src="@drawable/no_video" />

        <TextView
            android:id="@+id/durationTVID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/videoThumbnailIVID"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="#8000"
            android:padding="5dp"
            android:text="@string/_01_10"
            android:textColor="#fff"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</RelativeLayout>